containerization/loadbalancer/envoy.json
{
  "static_resources": {
    "listeners": [
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": "80"
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.http_connection_manager",
                "config": {
                  "codec_type": "AUTO",
                  "stat_prefix": "ingress_http",
                  "route_config": {
                    "name": "cyflixlb",
                    "virtual_hosts": [
                      {
                        "name": "cyflixlb",
                        "domains": ["*"],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/home"
                            },
                            "route": {
                              "cluster": "frontend"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "http_filters": [
                    {
                      "name": "envoy.router",
                      "config": {}
                    }
                  ]
                }
              }
            ]
          }
        ]
      }
    ],
    "clusters": [
      {
        "name": "frontend",
        "type": "STRICT_DNS",
        "connect_timeout": "0.25s",
        "lb_policy": "ROUND_ROBIN",
        "hosts": [
          {
            "socket_address": {
              "address": "cyflixfrontend",
              "port_value": "8080"
            }
          }
        ]
      }
    ]
  },
  "admin": {
    "access_log_path": "/dev/null",
    "address": {
      "socket_address": {
        "address": "0.0.0.0",
        "port_value": "9010"
      }
    }
  }
}
